[gd_scene load_steps=2 format=3 uid="uid://2bwrf5da8geo"]

[ext_resource type="Script" path="res://scripts/multiplayer/MiltiplayerController.gd" id="1_1ctnx"]

[node name="Control" type="Control" node_paths=PackedStringArray("host_button", "join_button", "start_button", "message_box")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ctnx")
host_button = NodePath("Host")
join_button = NodePath("Join")
start_button = NodePath("StartGame")
message_box = NodePath("MessageBox")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 400.0
offset_right = 158.0
offset_bottom = 432.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 441.0
offset_right = 158.0
offset_bottom = 473.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -149.0
offset_top = -48.0
offset_right = -21.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 52.0
offset_right = 516.0
offset_bottom = 83.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 52.0
offset_right = 73.0
offset_bottom = 75.0
text = "Name"

[node name="MessageBox" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -138.0
offset_right = 441.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Server messages appear here..."
editable = false

[node name="HostInstructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -366.0
offset_top = -43.0
offset_right = -153.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "When everyone has joined, press here ==>"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
